Update: stelly clouds no longer control dark and light mode, instead slider button added. homepage, habit tracker and account settings titles transformed into clickable elements that show and hide their lists respectively. react icon arrows added to better show weather lists are collapsed or shown. black background color removed from sign up and sign in buttons, replaced with a darker green and blue for better color flow

--- a/front-end/src/components/Navbar/Desktop/Desktop.scss
+++ b/front-end/src/components/Navbar/Desktop/Desktop.scss
@@ -1,14 +1,72 @@
-.desktop-navbar-title {
+$stellyHappy: url("../../../assets//images/StellyHappy.png");
+
+.desktop-navbar-title-container {
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 40px;
 
   .desktop-navbar-logo {
-    width: 75px;
+    max-width: 75px;
+    max-height: 75px;
+    width: auto;
+    height: auto;
 
     &:hover {
       cursor: pointer;
+    }
+  }
+
+  .desktop-navbar-title {
+    .nav-theme-switcher-container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin-bottom: 1em;
+
+      .nav-theme-switcher-outer-box {
+        width: 50px;
+        height: 25px;
+        position: relative;
+
+        .nav-theme-switcher-inner-box {
+          width: 23px;
+          height: 23px;
+          position: absolute;
+          z-index: 1;
+          transition: transform 0.3s ease-in-out;
+        }
+
+        #nav-light-logo,
+        #nav-dark-logo {
+          position: absolute;
+          font-size: 20px;
+          top: 2px;
+          transition: opacity 0.3s ease-in-out;
+        }
+
+        #nav-dark-logo {
+          left: 2px;
+          color: whitesmoke;
+          opacity: 1;
+        }
+
+        #nav-light-logo {
+          right: 2px;
+          color: black;
+          opacity: 1;
+        }
+      }
+
+      .nav-theme-switcher-custom {
+        font-size: 10px;
+        color: #0a58ca;
+        text-decoration: underline;
+
+        &:hover {
+          cursor: pointer;
+          color: #3370ca;
+        }
+      }
     }
   }
 }
@@ -19,6 +77,13 @@
   justify-content: center;
   gap: 1em;
   width: 95%;
+
+  h3 {
+    &:hover {
+      cursor: pointer;
+      color: gold;
+    }
+  }
 }
 
 .desktop-navbar-link-container {
@@ -47,6 +112,11 @@
     .desktop-navbar-button {
       width: 80%;
       border: none;
+      transition: all 0.3s ease-in-out;
+
+      &:hover {
+        transform: scale(1.05);
+      }
     }
 
     #desktop-navbar-dashboard-button {
@@ -106,10 +176,10 @@
     }
 
     #desktop-navbar-notifications-button {
-      background-color: #ffb347;
+      background-color: #ffcc3ed1;
 
       &:hover {
-        background-color: #4f7ad1;
+        background-color: #b08c2b;
       }
     }
 
@@ -130,5 +200,17 @@
       color: black;
       border: 1px solid black;
     }
+  }
+}
+
+.theme-switcher-dark {
+  .nav-theme-switcher-inner-box {
+    transform: translateX(25px);
+  }
+}
+
+.theme-switcher-light {
+  .nav-theme-switcher-inner-box {
+    transform: translateX(0);
   }
 }
