--- a/front-end/src/components/Navbar/Navbar.scss
+++ b/front-end/src/components/Navbar/Navbar.scss
@@ -41,8 +41,8 @@
   align-items: center;
   background-color: none;
   border-radius: 20px 20px 0px 0px;
-  -webkit-box-shadow: 5px 5px 15px 5px #000000;
-  box-shadow: 5px 5px 15px 1.5px #000000;
+  -webkit-box-shadow: 5px 5px 15px 5px black;
+  box-shadow: 5px 5px 15px 1.5px black;
 }
 
 .navbar-auth-buttons {
@@ -53,7 +53,6 @@
   grid-template-columns: repeat(2, 1fr);
 
   .signin-button {
-    // border: none;
     transition: all 0.3s ease-in-out;
     width: 90%;
     margin: 0 auto;
@@ -62,6 +61,7 @@
       cursor: pointer;
       transform: scale(1.05);
       box-shadow: 0 8px 20px rgba(0, 0, 0, 0.5);
+      background-color: #12663f;
     }
 
     &:active {
@@ -79,6 +79,7 @@
       cursor: pointer;
       transform: scale(1.05);
       box-shadow: 0 8px 20px rgba(0, 0, 0, 0.5);
+      background-color: #0a56c9;
     }
 
     &:active {
@@ -93,7 +94,6 @@
     box-shadow: 0 5px 15px rgba(255, 255, 255, 0.3);
 
     &:hover {
-      background-color: black;
       box-shadow: 0 8px 20px rgba(255, 255, 255, 0.5);
     }
 
@@ -108,7 +108,6 @@
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
 
     &:hover {
-      background-color: white;
       box-shadow: 0 8px 20px rgba(0, 0, 0, 0.5);
     }
 
